objects/wkdw__OnboardingTemplateTask__c.object
<CustomObject>
    <description>Custom object that represents transition tasks that can be associated with a template.</description>
    <fields>
        <fullName>wkdw__Description__c</fullName>
        <description>A brief description about the template.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkdw__EffectiveDateOffset__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>This can be a positive or negative number that represents the difference in days relative to the Transition Plan Effective Date</inlineHelpText>
        <label>Effective Date Offset</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkdw__IndividualUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If Task Owner Type = Individual User, this field is required</description>
        <label>Individual User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Transition_Plan_Template_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkdw__OnboardingTask__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Transition Task that is linked to the template</description>
        <label>Transition Plan Task</label>
        <referenceTo>wkdw__OnboardingTask__c</referenceTo>
        <relationshipLabel>Transition Plan Template Tasks</relationshipLabel>
        <relationshipName>Onboarding_Tasks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkdw__OnboardingTemplate__c</fullName>
        <description>Parent Template record Id.</description>
        <label>Transition Plan Template</label>
        <referenceTo>wkdw__OnboardingTemplate__c</referenceTo>
        <relationshipLabel>Transition Plan Template Tasks</relationshipLabel>
        <relationshipName>Template_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>wkdw__Queue__c</fullName>
        <description>If Task Owner Type = Queue, this field is required</description>
        <inlineHelpText>Please enter the Queue ID in this field</inlineHelpText>
        <label>Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkdw__TaskOwnerType__c</fullName>
        <description>Keep PL options in this order</description>
        <label>Task Owner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                    <default>true</default>
                    <label>Employee</label>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Individual User</fullName>
                    <isActive>false</isActive>
                    <label>Individual User - Reserved for future use</label>
                </value>
                <value>
                    <fullName>Queue</fullName>
                    <isActive>false</isActive>
                    <label>Queue - Reserved for future use</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transition Plan Template Task</label>
    <listViews>
        <fullName>wkdw__All</fullName>
        <columns>NAME</columns>
        <columns>wkdw__OnboardingTask__c</columns>
        <columns>wkdw__OnboardingTemplate__c</columns>
        <columns>wkdw__EffectiveDateOffset__c</columns>
        <columns>wkdw__TaskOwnerType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TPTT-{0000}</displayFormat>
        <label>Template Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transition Plan Template Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>